# dotfile_manager

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release-please.yml
cfg/: symlinks
scripts/: test
src/: cli.rs  error.rs  main.rs
